k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-journal
spec:
  selector:
    app: journal
  type: NodePort
  ports:
    - name: http
      port: 12000
      protocol: TCP
      targetPort: 12000
