k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: journal-ingress
spec:
  backend:
    serviceName: spring-boot-journal
    servicePort: 12000
